# exako

./: pyproject.toml
exako/: database.py  main.py  settings.py
exako/apps/cardset/: models.py
exako/apps/core/: enum.py  i18n.py  middleware.py
exako/apps/exercise/: constants.py  constats.py  models.py
exako/apps/term/: __init__.py  constants.py  models.py  repository.py  schema.py  validators.py
exako/apps/term/routers/: definition.py  example.py  image.py  lexical.py  pronunciation.py  term.py
exako/apps/user/: models.py  router.py  schema.py  security.py
exako/core/: enum.py  i18n.py  middleware.py  pagination.py  repository.py  schema.py  validator.py
exako/core/models/: shortcuts.py
exako/tests/: conftest.py
exako/tests/apps/term/api/: test_definition.py  test_example.py  test_image.py  test_lexical.py  test_pronunciation.py  test_term.py
exako/tests/factories/: term.py
migrations/: env.py
migrations/models/: 0_20241014135658_init.py  0_20241014165642_init.py  1_41782471247817_exercise_constraints.py
migrations/versions/: 1f6e85ee7053_initial_schema.py  5dae50486734_core_functions.py  8e139a618c68_inital_schema.py  e72fef13c0ed_exercise_constraints.py
